Aula 26 09 iniciando com CSS

--- a/Aula 2209/exercicio1.html
+++ b/Aula 2209/exercicio1.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro exercídio frontend</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Primeiro exercício frontend</title>
+    <link rel="stylesheet" href="exercicio1css.css">
     <script scr="exercicio1.js"></script>
 </head>
 
@@ -13,9 +13,6 @@
     <header>
         <h1>Exercício 1 FrontEnd</h1>
     </header>
-    <nav>
-        <a href="exercicio1.html" tittle="Home">Home</a>
-    </nav>
 
     <h2>Estamos começando no frontend</h2>
     
@@ -26,12 +23,12 @@
     </p>
 
     <ul>
-        <li>HTML</li>
-        <li>CSS</li>
-        <li>JavaScript</li>
+        <li><h4>HTML</h4></li>
+        <li><h4>CSS</h4></li>
+        <li><h4>JavaScript</h4></li>
     </ul>
 
-    <p>
+    <p class="centered-text">
         A IDE que utilizaremos será o VSCode:
     </p>
 
@@ -41,13 +38,17 @@
     </figure>
     <br><br>
 
-    Clique <a href="https://github.com/TonyKerr07/GenExerciciosFrontEnd" 
-    target="_blank"> aqui</a> para abrir o repositório do GitHub com os exercícios 
-    de frontend
+    <h3>Clique 
+        <a href="https://github.com/TonyKerr07/GenExerciciosFrontEnd" 
+    target="_blank"> aqui
+        </a>
+        para abrir o repositório do GitHub com os exercícios 
+    de frontend 
+    </h3>
 
     <footer>
-        <p>Desenvolvido por Antonio Kerr</p>
-        <p>Copyright 2023</p>
+        <strong> Desenvolvido por Antonio Kerr<br>
+        Copyright 2023</strong>
     </footer>
 
     
