--- a/Aula 2209/exercicio2.html
+++ b/Aula 2209/exercicio2.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Segundo exercídio frontend</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Segundo exercício frontend</title>
+    <link rel="stylesheet" href="exercicio2css.css">
     <script scr="exercicio1.js"></script>
 </head>
 <body>
@@ -15,7 +15,6 @@
     
     <h2>Teste de tabela:</h2>
     <h3>Criando uma tabuada</h3>
-    <i>apenas para treino</i><br><br>
     
     <table>
         <thead>
